[release/ilencina-svc112] Trash positioning fix. Scrollbar does not affect anymore.

--- a/app/src/app/formula/components/formula-drop-space/formula-drop-space.component.scss
+++ b/app/src/app/formula/components/formula-drop-space/formula-drop-space.component.scss
@@ -10,27 +10,6 @@ div.draggable-space-container {
   width: 100%;
   position: relative;
 
-  div.trash-container {
-    position: absolute;
-    right: 2rem;
-    top: 2rem;
-
-    span.trash-icon {
-      background-color: $PRIMARY_COLOR;
-      padding: 0.7rem 0.8rem;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 0 3px;
-
-      i {
-        color: #fff;
-        font-size: 1.3rem;
-      }
-    }
-  }
-
   #draw-container {
     margin: 0 auto;
   }
