--- a/app/src/app/formula/containers/formula/formula.container.scss
+++ b/app/src/app/formula/containers/formula/formula.container.scss
@@ -29,6 +29,7 @@ div.formula-create-container {
   }
 
   div.ide-container {
+    position: relative;
     height: 100%;
     width: 100%;
   }
