--- a/app/src/styles/formula-ide.scss
+++ b/app/src/styles/formula-ide.scss
@@ -90,3 +90,28 @@
     background-color:lightblue;
   }
 }
+
+div.trash-container {
+  position: absolute;
+  z-index: 100;
+  top: 25%;
+  right: 6%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  span.trash-icon {
+    background-color: $PRIMARY_COLOR;
+    padding: 0.7rem 0.8rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 3px;
+
+    i {
+      color: #fff;
+      font-size: 1.3rem;
+    }
+  }
+}
